--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Major tasks
 -----------
 
+ * The interpreter is broken since pysandbox 1.5.1 because the compile()
+   function is now blocked
  * Hide type.__bases__ on Python 2.5 or mark the attribute as read-only
  * Python3 support: fix proxy()
  * Write an option to run the code in a subprocess
