--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ AUTHORS
 =======
 
 Tav <tav AT espians.com> - author of safelite.py
-Victor Stinner <victor.stinner AT haypocalc.com> - author of pysandbox, based on safelite.py
+Victor Stinner <victor.stinner AT gmail.com> - author of pysandbox, based on safelite.py
 
 Contributors
 ============
